@@ -3,16 +3,6 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2026-01-23T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-24T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-25T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -69,6 +59,16 @@
     },
     {
       "timestamp": "2026-02-05T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-06T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-07T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
